Fix spacing and empty string entries

--- a/src/nlp-visual-editor/components/rhs-panel.scss
+++ b/src/nlp-visual-editor/components/rhs-panel.scss
@@ -17,8 +17,9 @@ limitations under the License.
 .rhs-panel-container {
   min-width: 500px;
   max-width: 500px;
-  padding: 0 1rem;
+  padding: 0 1rem 100px 1rem;
   height: 100%;
+  overflow: scroll;
 
   .rhs-panel-header {
     padding: 1rem 0 1.5rem 0;
