--- a/src/nlp-visual-editor/nlp-visual-editor.scss
+++ b/src/nlp-visual-editor/nlp-visual-editor.scss
@@ -27,7 +27,6 @@ limitations under the License.
 
   .right-flyout-panel {
     border-left: 1px solid #e0e0e0;
-    overflow: scroll;
   }
 
   .warning-modal {
